# owo

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  api.yaml  deploy.sh  docker-compose.yml  ngapp.conf  nginx.conf  package-lock.json  package.json  passport.md  pyproject.toml  requirements-dev.txt  requirements.txt  webpack.config.js
.github/workflows/: build-docs.yml  pythonapp.yml
docs/: bundle.js.map  index.html  main.css.map
owo/: __init__.py  app.py
owo/api/: api.py  election.py  schemas.py  testing.py  user.py  utils.py
owo/front/: main.py
owo/security/: auth.py  hashing.py  utils.py
owo/static/: index.js  main.js  styles.css  theme.js
owo/static/jsx/components/: Addsong.js  SongItem.js  ThemeItem.js  User.js  Voting.js
owo/templates/: addsong.html  adminusers.html  adminvotings.html  index.html  themevoting.html
