[tool.poetry]
name = "owo"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7"
atomicwrites = "^1.3.0"
attrs = "^19.3.0"
bson = "^0.5.8"
certifi = "^2019.9.11"
chardet = "^3.0.4"
click = "^7.0"
entrypoints = "^0.3"
flask = "^1.1.1"
flask-jwt-extended = "^3.24.1"
gunicorn = "^20.0.4"
idna = "^2.8"
importlib-metadata = "^0.23"
isort = "^4.3.21"
itsdangerous = "^1.1.0"
jinja2 = "^2.10.3"
lazy-object-proxy = "^1.4.3"
loguru = "^0.3.2"
markupsafe = "^1.1.1"
mccabe = "^0.6.1"
more-itertools = "^7.2.0"
packaging = "^19.2"
pluggy = "^0.13.0"
py = "^1.8.0"
pyjwt = "^1.7.1"
pymongo = "^3.10.1"
pyparsing = "^2.4.5"
pytest = "^5.2.3"
python-dateutil = "^2.8.1"
requests = "^2.22.0"
six = "^1.13.0"
urllib3 = ">=1.25.7"
voluptuous = "^0.11.7"
wcwidth = "^0.1.7"
werkzeug = "^0.16.0"
wrapt = "^1.11.2"
zipp = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
typed-ast = "^1.4.1"
astroid = "^2.3.3"
autopep8 = "^1.4.4"
pycodestyle = "^2.5.0"
pyflakes = "^2.1.1"
rope = "^0.16.0"
